Mostly finished with battle js functionality, just the one console log issue

--- a/pokemon_game/pages/battle.css
+++ b/pokemon_game/pages/battle.css
@@ -100,3 +100,9 @@ img {
     background-color: #fff;
     font-size: 2vw;
 }
+
+#call-button {
+    height: 8vh;
+    width: 13vw;
+    font-size: 2vw;
+}
