--- a/pokemon_game/pages/battle.css
+++ b/pokemon_game/pages/battle.css
@@ -12,7 +12,11 @@ body {
     height: 100vh;
     text-align: center;
     margin: auto;
+
 }
+
+
+
 header {
     background-color: rgb(150, 18, 17);
     color: yellow;
@@ -37,19 +41,14 @@ h1 {
     flex-direction: column;
     background-color: rgb(150, 18, 17);
     align-items: center;
+
 }
 
-.cycle-buttons {
-    display: flex;
-    justify-content: center;
-    background-color: silver;
-    box-shadow: 2px 2px 2px black;
-    border-radius: 5px;
-    margin: 1%;
-    width: 5vw;
-    font-size: 3vw;
-    align-items: center;
+.container > div {
+    width: 30%;
+    height: 95%;
 }
+
 
 #pokedex, #enemy {
     width: 41vw;
@@ -57,6 +56,7 @@ h1 {
     border: 1px solid black;
     border-radius: 5px;
     box-shadow: 2px 2px 1px black;
+    border:
 }
 
 #enemy {
@@ -94,7 +94,11 @@ img {
 }
 
 #arena {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: rgb(150, 18, 17);
+
 }
 
 /* *********************** */
@@ -112,7 +116,68 @@ img {
 }
 
 #call-button {
-    height: 8vh;
-    width: 13vw;
-    font-size: 2vw;
+    height: 13vh;
+    width: 30vw;
+    font-size: 4vw;
+}
+
+/* ************************************************************************** */
+/*                              Media styling                                 */
+/* ************************************************************************** */
+
+@media (min-width: 700px) {
+    .container {
+        display: flex;
+        justify-content: center;
+        flex-flow: row;
+        background-color: rgb(150, 18, 17);
+        align-items: center;
+    }
+
+    h1, h2 {
+        background-color: rgb(150, 18, 17);
+        margin: 0;
+        padding: 3%;
+        text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+    }
+
+    h1 {
+        font-size: 5vw;
+        margin-bottom: 10%;
+    }
+
+    #pokedex, #enemy {
+        width: 290px;
+        height: 450px;
+        margin: 1%;
+        border: 1px solid black;
+        border-radius: 5px;
+        box-shadow: 2px 2px 1px black;
+        border: 2px solid black;
+
+    }
+
+    img {
+        width: 100%;
+    }
+
+    .pokemon-info > h2 {
+        background-color: #fff;
+        font-size: 30px;
+        text-shadow: none;
+    }
+
+    .pokemon-info > p {
+        font-size: 20px;
+    }
+
+    #call-button {
+        height: 100px;
+        width: 250px;
+        font-size: 25px;
+    }
+
+
+
+
 }
