--- a/pokemon_game/pages/battle.css
+++ b/pokemon_game/pages/battle.css
@@ -12,6 +12,7 @@ body {
     height: 100vh;
     text-align: center;
     margin: auto;
+    border: 5px solid black;
 
 }
 
@@ -20,6 +21,8 @@ body {
 header {
     background-color: rgb(150, 18, 17);
     color: yellow;
+    padding: 5%;
+    border-bottom: 3px solid black;
 }
 
 h1, h2 {
@@ -31,7 +34,18 @@ h1, h2 {
 
 h1 {
     font-size: 8vw;
-    margin-bottom: 10%;
+
+}
+
+a {
+    font-size: 4vw;
+    font-weight: bold;
+    text-decoration: none;
+    color: black;
+    background-color: rgba(200, 200, 255, .8);
+    padding: 3%;
+    margin: 3%;
+    border-radius: 5px;
 }
 
 
@@ -46,17 +60,13 @@ h1 {
 
 .container > div {
     width: 30%;
-    height: 95%;
+    height: 100%;
 }
 
 
 #pokedex, #enemy {
-    width: 41vw;
-    margin: 1%;
-    border: 1px solid black;
     border-radius: 5px;
-    box-shadow: 2px 2px 1px black;
-    border:
+    margin: 2%;
 }
 
 #enemy {
@@ -67,11 +77,24 @@ h1 {
 /* *********************** */
 .pokemon {
     display: none;
+    display: flex;
+    justify-content: space-between;
     border-radius: 5px;
+    border: 1px solid black;
+    box-shadow: 2px 2px 1px black;
+    height: 100%;
+}
+
+.enemy {
+    border-radius: 5px;
+    border: 1px solid black;
+    box-shadow: 2px 2px 1px black;
+    height: 100%;
 }
 
 img {
-    width: 40vw;
+    width: 100%;
+    border-radius: 5px;
 }
 
 .pokemon-info {
@@ -93,39 +116,59 @@ img {
     display: block;
 }
 
-#arena {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(150, 18, 17);
-
-}
 
 /* *********************** */
 /*     Modal styling     */
 /* *********************** */
-#modal {
-    display: none;
 
+#modal {
+    position: relative;
+    display: none;
+    height: 35%;
+    width: 50%;
+    z-index: 1;
+    border-radius: 5px;
+    margin: 2%;
+    box-shadow: 2px 2px 1px black;
 }
 
 #modal > h1 {
     background-color: #fff;
-    font-size: 2vw;
+    font-size: 5vw;
     text-shadow: none;
+    margin: 1%;
+}
+
+#modal > p {
+    font-size: 4vw;
+    margin: 1%;
+
+}
+
+#modal-footer {
+    display: flex;
+    justify-content: space-around;
+    border-radius: 5px;
+}
+
+modal-button {
+    background-color: blue;
 }
 
 #call-button {
     height: 13vh;
     width: 30vw;
     font-size: 4vw;
+    z-index: 0;
 }
+
+
 
 /* ************************************************************************** */
 /*                              Media styling                                 */
 /* ************************************************************************** */
 
-@media (min-width: 700px) {
+@media (min-width: 550px) {
     .container {
         display: flex;
         justify-content: center;
@@ -143,17 +186,22 @@ img {
 
     h1 {
         font-size: 5vw;
-        margin-bottom: 10%;
+        margin-bottom: 5%;
     }
 
-    #pokedex, #enemy {
-        width: 290px;
-        height: 450px;
-        margin: 1%;
-        border: 1px solid black;
+    a {
+        font-size: 25px;
+        font-weight: bold;
+        text-decoration: none;
+        color: black;
+        background-color: rgba(200, 200, 255, .8);
+        padding: 3%;
+        margin: 3%;
         border-radius: 5px;
-        box-shadow: 2px 2px 1px black;
-        border: 2px solid black;
+        width: 100px;
+    }
+
+    .pokemon, .enemy {
 
     }
 
@@ -177,6 +225,34 @@ img {
         font-size: 25px;
     }
 
+    #modal {
+        display: none;
+        height: 50%;
+        width: 50%;
+        z-index: 1;
+        border-radius: 5px;
+        margin: 2%;
+        box-shadow: 2px 2px 1px black;
+    }
+
+    #modal > h1 {
+        background-color: #fff;
+        font-size: 30px;
+        text-shadow: none;
+        margin: 1%;
+    }
+
+    #modal > p {
+        font-size: 20px;
+        margin: 1%;
+
+    }
+
+    #modal-footer {
+        display: flex;
+        justify-content: space-around;
+        border-radius: 5px;
+    }
 
 
 
