--- a/pokemon_game/style.css
+++ b/pokemon_game/style.css
@@ -9,7 +9,7 @@ body {
     flex-direction: column;
     background-color: rgb(150, 18, 17);
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     text-align: center;
     margin: auto;
     border: 5px solid black;
