--- a/pokemon_game/style.css
+++ b/pokemon_game/style.css
@@ -1,6 +1,7 @@
 * {
     background-color: #fff;
     /* border: 1px solid grey; */
+    font-family: 'Righteous', cursive;
 }
 
 body {
@@ -28,11 +29,11 @@ h1, h2 {
 }
 
 h1 {
-    font-size: 40px;
+    font-size: 10vw;
 }
 
 h2 {
-    font-size: 30px;
+    font-size: 7vw;
     color: gainsboro;
 }
 
