Didnt mean to push up the last css regarding really large screens

--- a/pokemon_game/pages/battle.css
+++ b/pokemon_game/pages/battle.css
@@ -295,111 +295,4 @@ modal-button {
 
 }
 //========================= For really large screens ===============================//
-@media (min-width: 1025px) {
-    header {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        background-color: rgb(150, 18, 17);
-        color: yellow;
-        padding: 5%;
-        border-bottom: 3px solid black;
-        height: 20%;
-    }
-
-    .container {
-        display: flex;
-        justify-content: center;
-        flex-flow: row;
-        background-color: rgb(150, 18, 17);
-        align-items: center;
-        height: 100%;
-        padding: 10% 2%;
-    }
-
-    h1, h2 {
-        background-color: rgb(150, 18, 17);
-        margin: 0;
-        padding: 3%;
-        text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
-    }
-
-    h1 {
-        font-size: 5vw;
-    }
-
-    a {
-        font-size: 2.5vw;
-        font-weight: bold;
-        text-decoration: none;
-        color: black;
-        background-color: rgba(200, 200, 255, .8);
-        padding: 3%;
-        margin: 3%;
-        border-radius: 5px;
-        width: 50%;
-    }
-
-    #pokedex, #enemy {
-        background-color: rgb(150, 18, 17);
-        border-radius: 5px;
-        margin: 2%;
-        height: 40vw;
-    }
-
-    .pokemon, .enemy {
-        height: 40vw;
-    }
-
-    img {
-        width: 99%;
-    }
-
-    .pokemon-info > h2 {
-        background-color: #fff;
-        font-size: 3vw;
-        text-shadow: none;
-        margin: auto;
-    }
-
-    .pokemon-info > p {
-        font-size: 2vw;
-        margin: auto;
-    }
-
-    #call-button {
-        height: 100px;
-        width: 250px;
-        font-size: 25px;
-    }
-
-    #modal {
-        display: none;
-        height: 25vw;
-        width: 30%;
-        z-index: 1;
-        border-radius: 5px;
-        margin: 2%;
-        box-shadow: 2px 2px 1px black;
-    }
-
-    #modal > h1 {
-        background-color: #fff;
-        font-size: 3vw;
-        text-shadow: none;
-        margin: 1%;
-    }
-
-    #modal > p {
-        font-size: 2vw;
-        margin: 1%;
-
-    }
-
-    #modal-footer {
-        display: flex;
-        justify-content: space-around;
-        border-radius: 5px;
-    }
-
-}
+/* 1025px have everything stay as is size-wise at that point, if have time to do so */
