--- a/pokemon_game/pages/battle.css
+++ b/pokemon_game/pages/battle.css
@@ -139,7 +139,7 @@ img {
 #modal {
     position: relative;
     display: none;
-    height: 38%;
+    height: 45%;
     width: 50%;
     z-index: 1;
     border-radius: 5px;
@@ -149,13 +149,13 @@ img {
 
 #modal > h1 {
     background-color: #fff;
-    font-size: 5vw;
+    font-size: 4vw;
     text-shadow: none;
     margin: 1%;
 }
 
 #modal > p {
-    font-size: 4vw;
+    font-size: 3vw;
     margin: 1%;
 
 }
@@ -179,6 +179,22 @@ modal-button {
     border: 1px solid black;
 }
 
+/* ************************************************************************** */
+/*                              Keyframes animations                          */
+/* ************************************************************************** */
+@keyframes victory {
+    0% {
+        transform: scale(1.3);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+@keyframes spin {
+    0% {
+        transform: rotate(360deg);
+    }
+}
 
 /* ************************************************************************** */
 /*                              Media styling                                 */
